
[TestPatch_SingleProvider - 1]
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
    name: clientsecrets.secret-manager.ngl.cx
spec:
    group: secret-manager.ngl.cx
    names:
        kind: ClientSecret
        listKind: ClientSecretList
        plural: clientsecrets
        singular: clientsecret
    scope: Namespaced
    versions:
        - name: v1alpha1
          schema:
            openAPIV3Schema:
                properties:
                    spec:
                        allOf:
                            - oneOf:
                                - properties:
                                    config: {}
                                    provider:
                                        const: simple
                        properties:
                            config:
                                type: object
                            provider:
                                type: string
                        type: object
                type: object
          served: true
          storage: true

---

[TestPatch_MultipleProviders - 1]
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
    name: clientsecrets.secret-manager.ngl.cx
spec:
    group: secret-manager.ngl.cx
    names:
        kind: ClientSecret
        listKind: ClientSecretList
        plural: clientsecrets
        singular: clientsecret
    scope: Namespaced
    versions:
        - name: v1alpha1
          schema:
            openAPIV3Schema:
                properties:
                    spec:
                        allOf:
                            - oneOf:
                                - properties:
                                    config: {}
                                    provider:
                                        const: simple
                                - properties:
                                    config: {}
                                    provider:
                                        const: complex
                        properties:
                            config:
                                type: object
                            provider:
                                type: string
                        type: object
                type: object
          served: true
          storage: true

---

[TestPatch_EmptyRegistry - 1]
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
    name: clientsecrets.secret-manager.ngl.cx
spec:
    group: secret-manager.ngl.cx
    names:
        kind: ClientSecret
        listKind: ClientSecretList
        plural: clientsecrets
        singular: clientsecret
    scope: Namespaced
    versions:
        - name: v1alpha1
          schema:
            openAPIV3Schema:
                properties:
                    spec:
                        allOf:
                            - oneOf: []
                        properties:
                            config:
                                type: object
                            provider:
                                type: string
                        type: object
                type: object
          served: true
          storage: true

---
